--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "auto-translate",
+  "name": "open ai",
   "version": "1.0.0",
-  "description": "auto translate from clipboard",
+  "description": "open ai exploration",
   "main": "index.js",
   "scripts": {
-    "translate": "nodemon index.js",
+    "ai": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "node-clipboardy": "^1.0.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "openai": "^3.1.0"
   }
 }
